[tool.poetry]
name = "epy-reader"
version = "2022.9.24"
description = "CLI Ebook Reader"
authors = ["Benawi Adha <benawiadha@gmail.com>"]
license = "GPL-3.0"
packages = [
    { include = "epy.py" },
    { include = "epy_extras" },
]

[tool.poetry.scripts]
epy = "epy:main"

[tool.poetry.dependencies]
python = "^3.7"
windows-curses = { version = "*", markers = "platform_system == 'Windows'" }

[tool.poetry.dev-dependencies]
black = "*"
coverage = "*"
debugpy = "*"
ipython = "*"
mypy = "*"
pynvim = "*"
pytest = "*"

[tool.mypy]
strict_optional = true

[tool.black]
line-length = 100
target-version = ['py38']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
