[tool.poetry]
name = "epy-reader"
version = "2022.9.24"
description = "CLI Ebook Reader"
authors = ["Benawi Adha <benawiadha@gmail.com>"]
license = "GPL-3.0"
packages = [
    { include = "epy_reader", from = "src" }
]

[tool.poetry.scripts]
epy = "epy.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"
windows-curses = { version = "*", markers = "platform_system == 'Windows'" }

[tool.poetry.dev-dependencies]
pynvim = "^0.4.3"
black = "^22.8.0"
coverage = "^6.5.0"
debugpy = "^1.6.3"
ipython = "^8.5.0"
mypy = "^0.981"
pytest = "^7.1.3"
isort = "^5.10.1"

[tool.mypy]
strict_optional = true

[tool.black]
line-length = 100
target-version = ['py38']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
